began link addition

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -13,9 +13,9 @@
 
     <div id ="sideleft">
         <div class="btn-group">
-            <button id="about"> ABOUT </button>
-            <button id="byIndustry">BY INDUSTRY </button>
-            <button id="byRace">BY RACIAL AND GENDER IDENTITY</button>
+            <a href="google.com"><button id="about"> ABOUT </button></a>
+            <a href=""><button id="byIndustry">BY INDUSTRY </button></a>
+            <a href=""><button id="byRace">BY RACIAL AND GENDER IDENTITY</button></a>
         </div>
         <!--<div id = "sidebar-btn">-->
             <!--<span></span>-->
