--- a/webapp/index.html
+++ b/webapp/index.html
@@ -25,6 +25,16 @@
     </div>
 
 
+  <div id = "abouttxt", style="text-align:center">
+    <pre><p style="font-size:16px;">This project allows you to sift through employment statistics collected from the US Bureau of Labor.
+         We seek to make apparent dissimilarities in employment based on gender and race identity in the US,
+         across a variety of government recognized industrial sectors.
+
+    Click on either industries or identities to begin. </p> </pre>
+  </div>
+
+  </div>
+
 
 
     </body>
